versions/v3.7.0/doxygen/html/zperf_8h_source.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/doxygen/html/zperf_8h_source.html
original_path: doxygen/html/zperf_8h_source.html
---

| Logo | Zephyr API Documentation  3.7.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

zperf.h

[Go to the documentation of this file.](zperf_8h.md)

1/\*

2 \* Copyright (c) 2016 Intel Corporation

3 \* Copyright (c) 2022 Nordic Semiconductor ASA

4 \*

5 \* SPDX-License-Identifier: Apache-2.0

6 \*/

7

16

17#ifndef ZEPHYR\_INCLUDE\_NET\_ZPERF\_H\_

18#define ZEPHYR\_INCLUDE\_NET\_ZPERF\_H\_

19

20#include <[zephyr/net/net\_ip.h](net__ip_8h.md)>

21#include <[zephyr/net/socket.h](net_2socket_8h.md)>

22

23#ifdef \_\_cplusplus

24extern "C" {

25#endif

26

28

29enum zperf\_status {

30 ZPERF\_SESSION\_STARTED,

31 ZPERF\_SESSION\_PERIODIC\_RESULT,

32 ZPERF\_SESSION\_FINISHED,

33 ZPERF\_SESSION\_ERROR

34} \_\_packed;

35

36struct zperf\_upload\_params {

37 struct sockaddr peer\_addr;

38 [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) duration\_ms;

39 [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) rate\_kbps;

40 [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) packet\_size;

41 char if\_name[[IFNAMSIZ](group__bsd__sockets.md#gacd06da230a96d3b7e6f193c5b3142002)];

42 struct {

43 [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) tos;

44 int tcp\_nodelay;

45 int priority;

46 [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) report\_interval\_ms;

47 } options;

48};

49

50struct zperf\_download\_params {

51 [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) port;

52 struct sockaddr addr;

53 char if\_name[[IFNAMSIZ](group__bsd__sockets.md#gacd06da230a96d3b7e6f193c5b3142002)];

54};

55

57

[ 59](structzperf__results.md)struct [zperf\_results](structzperf__results.md) {

[ 60](structzperf__results.md#adfd2738991c8bea53f20079421da6d96) [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) [nb\_packets\_sent](structzperf__results.md#adfd2738991c8bea53f20079421da6d96);

[ 61](structzperf__results.md#acf312d831d8e6707f7e769da92f8eb70) [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) [nb\_packets\_rcvd](structzperf__results.md#acf312d831d8e6707f7e769da92f8eb70);

[ 62](structzperf__results.md#ac9ad68ef3b6081b64f290720ad9b5bc8) [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) [nb\_packets\_lost](structzperf__results.md#ac9ad68ef3b6081b64f290720ad9b5bc8);

[ 63](structzperf__results.md#aa1e3c86bcab447bc888bba0bbaa057d1) [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) [nb\_packets\_outorder](structzperf__results.md#aa1e3c86bcab447bc888bba0bbaa057d1);

[ 64](structzperf__results.md#a517ba180a6414a2f2d1484e698d57650) [uint64\_t](stdint_8h.md#a2095b9bffea4b2656950c6c0419edbf1) [total\_len](structzperf__results.md#a517ba180a6414a2f2d1484e698d57650);

[ 65](structzperf__results.md#aafb7f2c221c91c59ab0d6936ebc6ce2a) [uint64\_t](stdint_8h.md#a2095b9bffea4b2656950c6c0419edbf1) [time\_in\_us](structzperf__results.md#aafb7f2c221c91c59ab0d6936ebc6ce2a);

[ 66](structzperf__results.md#af4a5ce512fb37ddae8e2c12a0b67c3a2) [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) [jitter\_in\_us](structzperf__results.md#af4a5ce512fb37ddae8e2c12a0b67c3a2);

[ 67](structzperf__results.md#a550158fd641799c2a6b2d25617ac9a6c) [uint64\_t](stdint_8h.md#a2095b9bffea4b2656950c6c0419edbf1) [client\_time\_in\_us](structzperf__results.md#a550158fd641799c2a6b2d25617ac9a6c);

[ 68](structzperf__results.md#a8aedf97a8eeace1f4b9cda7e07e17e28) [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) [packet\_size](structzperf__results.md#a8aedf97a8eeace1f4b9cda7e07e17e28);

[ 69](structzperf__results.md#a5fcccf6747c449418c246ac1d945a1f8) [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) [nb\_packets\_errors](structzperf__results.md#a5fcccf6747c449418c246ac1d945a1f8);

70};

71

[ 79](group__zperf.md#gaffeb2d7cbca61021984e784f7ba4595b)typedef void (\*[zperf\_callback](group__zperf.md#gaffeb2d7cbca61021984e784f7ba4595b))(enum zperf\_status status,

80 struct [zperf\_results](structzperf__results.md) \*result,

81 void \*user\_data);

82

[ 92](group__zperf.md#ga6f2704914a9a577dac119a11f98c0e8e)int [zperf\_udp\_upload](group__zperf.md#ga6f2704914a9a577dac119a11f98c0e8e)(const struct zperf\_upload\_params \*param,

93 struct [zperf\_results](structzperf__results.md) \*result);

94

[ 104](group__zperf.md#ga24c061ea0dcd44b94c2ad79dfa264e44)int [zperf\_tcp\_upload](group__zperf.md#ga24c061ea0dcd44b94c2ad79dfa264e44)(const struct zperf\_upload\_params \*param,

105 struct [zperf\_results](structzperf__results.md) \*result);

106

[ 119](group__zperf.md#gacf57dcebd09cae8ecf61b553baf6b2cd)int [zperf\_udp\_upload\_async](group__zperf.md#gacf57dcebd09cae8ecf61b553baf6b2cd)(const struct zperf\_upload\_params \*param,

120 [zperf\_callback](group__zperf.md#gaffeb2d7cbca61021984e784f7ba4595b) callback, void \*user\_data);

121

[ 134](group__zperf.md#ga07704e0bd701c0f2da2b74b9a83d6b35)int [zperf\_tcp\_upload\_async](group__zperf.md#ga07704e0bd701c0f2da2b74b9a83d6b35)(const struct zperf\_upload\_params \*param,

135 [zperf\_callback](group__zperf.md#gaffeb2d7cbca61021984e784f7ba4595b) callback, void \*user\_data);

136

[ 148](group__zperf.md#gaae9e5669a76da0cde7454bbd7b491a4a)int [zperf\_udp\_download](group__zperf.md#gaae9e5669a76da0cde7454bbd7b491a4a)(const struct zperf\_download\_params \*param,

149 [zperf\_callback](group__zperf.md#gaffeb2d7cbca61021984e784f7ba4595b) callback, void \*user\_data);

150

[ 162](group__zperf.md#ga9ac136e27fc87f85ddb66cbd2f78256d)int [zperf\_tcp\_download](group__zperf.md#ga9ac136e27fc87f85ddb66cbd2f78256d)(const struct zperf\_download\_params \*param,

163 [zperf\_callback](group__zperf.md#gaffeb2d7cbca61021984e784f7ba4595b) callback, void \*user\_data);

164

[ 170](group__zperf.md#ga394e3a10550cf9d0a435f5d217dfbbdf)int [zperf\_udp\_download\_stop](group__zperf.md#ga394e3a10550cf9d0a435f5d217dfbbdf)(void);

171

[ 177](group__zperf.md#gac29193fb02ccb159b7adc3c8de64895a)int [zperf\_tcp\_download\_stop](group__zperf.md#gac29193fb02ccb159b7adc3c8de64895a)(void);

178

179#ifdef \_\_cplusplus

180}

181#endif

182

186

187#endif /\* ZEPHYR\_INCLUDE\_NET\_ZPERF\_H\_ \*/

[IFNAMSIZ](group__bsd__sockets.md#gacd06da230a96d3b7e6f193c5b3142002)

#define IFNAMSIZ

Network interface name length.

**Definition** socket.h:1100

[zperf\_tcp\_upload\_async](group__zperf.md#ga07704e0bd701c0f2da2b74b9a83d6b35)

int zperf\_tcp\_upload\_async(const struct zperf\_upload\_params \*param, zperf\_callback callback, void \*user\_data)

Asynchronous TCP upload operation.

[zperf\_tcp\_upload](group__zperf.md#ga24c061ea0dcd44b94c2ad79dfa264e44)

int zperf\_tcp\_upload(const struct zperf\_upload\_params \*param, struct zperf\_results \*result)

Synchronous TCP upload operation.

[zperf\_udp\_download\_stop](group__zperf.md#ga394e3a10550cf9d0a435f5d217dfbbdf)

int zperf\_udp\_download\_stop(void)

Stop UDP server.

[zperf\_udp\_upload](group__zperf.md#ga6f2704914a9a577dac119a11f98c0e8e)

int zperf\_udp\_upload(const struct zperf\_upload\_params \*param, struct zperf\_results \*result)

Synchronous UDP upload operation.

[zperf\_tcp\_download](group__zperf.md#ga9ac136e27fc87f85ddb66cbd2f78256d)

int zperf\_tcp\_download(const struct zperf\_download\_params \*param, zperf\_callback callback, void \*user\_data)

Start TCP server.

[zperf\_udp\_download](group__zperf.md#gaae9e5669a76da0cde7454bbd7b491a4a)

int zperf\_udp\_download(const struct zperf\_download\_params \*param, zperf\_callback callback, void \*user\_data)

Start UDP server.

[zperf\_tcp\_download\_stop](group__zperf.md#gac29193fb02ccb159b7adc3c8de64895a)

int zperf\_tcp\_download\_stop(void)

Stop TCP server.

[zperf\_udp\_upload\_async](group__zperf.md#gacf57dcebd09cae8ecf61b553baf6b2cd)

int zperf\_udp\_upload\_async(const struct zperf\_upload\_params \*param, zperf\_callback callback, void \*user\_data)

Asynchronous UDP upload operation.

[zperf\_callback](group__zperf.md#gaffeb2d7cbca61021984e784f7ba4595b)

void(\* zperf\_callback)(enum zperf\_status status, struct zperf\_results \*result, void \*user\_data)

Zperf callback function used for asynchronous operations.

**Definition** zperf.h:79

[socket.h](net_2socket_8h.md)

BSD Sockets compatible API definitions.

[net\_ip.h](net__ip_8h.md)

IPv6 and IPv4 definitions.

[uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f)

\_\_UINT32\_TYPE\_\_ uint32\_t

**Definition** stdint.h:90

[uint64\_t](stdint_8h.md#a2095b9bffea4b2656950c6c0419edbf1)

\_\_UINT64\_TYPE\_\_ uint64\_t

**Definition** stdint.h:91

[uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d)

\_\_UINT8\_TYPE\_\_ uint8\_t

**Definition** stdint.h:88

[uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e)

\_\_UINT16\_TYPE\_\_ uint16\_t

**Definition** stdint.h:89

[zperf\_results](structzperf__results.md)

Performance results.

**Definition** zperf.h:59

[zperf\_results::total\_len](structzperf__results.md#a517ba180a6414a2f2d1484e698d57650)

uint64\_t total\_len

Total length of the transferred data.

**Definition** zperf.h:64

[zperf\_results::client\_time\_in\_us](structzperf__results.md#a550158fd641799c2a6b2d25617ac9a6c)

uint64\_t client\_time\_in\_us

Client connection time in microseconds.

**Definition** zperf.h:67

[zperf\_results::nb\_packets\_errors](structzperf__results.md#a5fcccf6747c449418c246ac1d945a1f8)

uint32\_t nb\_packets\_errors

Number of packet errors.

**Definition** zperf.h:69

[zperf\_results::packet\_size](structzperf__results.md#a8aedf97a8eeace1f4b9cda7e07e17e28)

uint32\_t packet\_size

Packet size.

**Definition** zperf.h:68

[zperf\_results::nb\_packets\_outorder](structzperf__results.md#aa1e3c86bcab447bc888bba0bbaa057d1)

uint32\_t nb\_packets\_outorder

Number of packets out of order.

**Definition** zperf.h:63

[zperf\_results::time\_in\_us](structzperf__results.md#aafb7f2c221c91c59ab0d6936ebc6ce2a)

uint64\_t time\_in\_us

Total time of the transfer in microseconds.

**Definition** zperf.h:65

[zperf\_results::nb\_packets\_lost](structzperf__results.md#ac9ad68ef3b6081b64f290720ad9b5bc8)

uint32\_t nb\_packets\_lost

Number of packets lost.

**Definition** zperf.h:62

[zperf\_results::nb\_packets\_rcvd](structzperf__results.md#acf312d831d8e6707f7e769da92f8eb70)

uint32\_t nb\_packets\_rcvd

Number of packets received.

**Definition** zperf.h:61

[zperf\_results::nb\_packets\_sent](structzperf__results.md#adfd2738991c8bea53f20079421da6d96)

uint32\_t nb\_packets\_sent

Number of packets sent.

**Definition** zperf.h:60

[zperf\_results::jitter\_in\_us](structzperf__results.md#af4a5ce512fb37ddae8e2c12a0b67c3a2)

uint32\_t jitter\_in\_us

Jitter in microseconds.

**Definition** zperf.h:66

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [net](dir_d16b1c8acafe48878f854fbac26f332e.md)
- [zperf.h](zperf_8h.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.7.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
